# visema

./: .env  .env.example  .gitignore  .visema_rewards.json  AGENTS.md  PI.md  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt  visema_fixes_prompt.md
docs/: index.html
tests/: conftest.py  test_app.py  test_auth.py  test_chat.py  test_config.py  test_e2e.py  test_eventsub.py  test_main.py  test_queue.py  test_validator.py  test_ws_manager.py
visema/: main.py
visema/media/: queue.py  validator.py
visema/overlay/: index.html  overlay.css  overlay.js
visema/server/: app.py  ws_manager.py
visema/twitch/: auth.py  chat.py  eventsub.py
visema/utils/: config.py
